force-app/main/default/objects/QuoteLineItem/fields/Approval_Basis_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Approval_Basis_Unit_Price__c</fullName>
    <description>Snapshot of the Price Book Entry unit price used as the commercial
approval baseline when the quote line is created.</description>
    <inlineHelpText>Baseline list price captured when the quote line is created.
Later Price Book changes do not automatically change this value.</inlineHelpText>
    <label>Approval Basis Unit Price</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>