force-app/main/default/objects/QuoteLineItem/fields/Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason__c</fullName>
    <label>Discount Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volume Discount</fullName>
            </value>
            <value>
                <fullName>Strategic Customer</fullName>
            </value>
            <value>
                <fullName>Competitive Match</fullName>
            </value>
            <value>
                <fullName>Contract Renewal</fullName>
            </value>
            <value>
                <fullName>Bundled Offer</fullName>
            </value>
            <value>
                <fullName>Management Exception</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>