force-app/main/default/objects/QuoteLineItem/fields/Effective_Discount__c.field-meta.xml
<CustomField>
    <fullName>Effective_Discount__c</fullName>
    <formula>IF(
    PricebookEntry.UnitPrice &gt; 0,
    ROUND(
        MAX(
            0,
            1 - (
                UnitPrice * (1 - BLANKVALUE(Discount, 0))
            ) / PricebookEntry.UnitPrice
        ),
        4
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>