force-app/main/default/objects/QuoteLineItem/validationRules/VE_Discount_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>VE_Discount_Requires_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Effective_Discount__c &gt; 0,
    ISPICKVAL(Discount_Reason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Select a Discount Reason when any effective discount is applied.</errorMessage>
</ValidationRule>