force-app/main/default/objects/QuoteLineItem/validationRules/VE_Maximum_Discount_30_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>VE_Maximum_Discount_30_Percent</fullName>
    <active>true</active>
    <errorConditionFormula>Discount  &gt; 0.30</errorConditionFormula>
    <errorMessage>Discounts above 30% are not permitted.</errorMessage>
</ValidationRule>